[gd_scene format=3 uid="uid://8dwo1d2d67qo"]

[ext_resource type="Script" uid="uid://d6epi1rbvicb" path="res://Scripts/upgrades/UpgradeScreen.gd" id="1_o5sws"]

[node name="UpgradeScreen" type="Control" unique_id=847933536]
process_mode = 1
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 59.0
script = ExtResource("1_o5sws")

[node name="PanelContainer" type="PanelContainer" parent="." unique_id=1590582476]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer" unique_id=947493129]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="PanelContainer/VBoxContainer" unique_id=1781996593]
layout_mode = 2

[node name="Choice1" type="Button" parent="PanelContainer/VBoxContainer" unique_id=640474229]
layout_mode = 2

[node name="Choice2" type="Button" parent="PanelContainer/VBoxContainer" unique_id=1484637820]
layout_mode = 2

[node name="Choice3" type="Button" parent="PanelContainer/VBoxContainer" unique_id=1223754337]
layout_mode = 2
